--- a/org.occiware.mart.server/pom.xml
+++ b/org.occiware.mart.server/pom.xml
@@ -50,13 +50,13 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
-        <!-- To replace by infrastructure real connector -->
-        <dependency>
+         <dependency>
             <groupId>org.occiware</groupId>
-            <artifactId>org.eclipse.cmf.occi.infrastructure.connector.dummy</artifactId>
+            <artifactId>org.eclipse.cmf.occi.crtp</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+
 
         <!-- emf dependencies -->
         <dependency>
