--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <jdk.version>1.8</jdk.version>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+        <jdk.version>1.9</jdk.version>
     </properties>
     <dependencies>
         <!-- common dependencies -->
@@ -33,6 +33,54 @@
             <version>1.2.17</version>
             <scope>compile</scope>
         </dependency>
+    <dependency>
+    	<groupId>org.eclipse.acceleo</groupId>
+    	<artifactId>org.eclipse.acceleo.engine</artifactId>
+    	<version>3.5.1.201409021433</version>
+    </dependency>
+      <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>org.eclipse.acceleo.common</artifactId>
+        <version>3.5.1.201409021433</version>
+    </dependency>
+      <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>org.eclipse.acceleo.model</artifactId>
+        <version>3.5.1.201409021433</version>
+    </dependency>
+          <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>org.eclipse.ocl</artifactId>
+       	<version>3.4.2.v20140725-2242</version>
+    </dependency>
+              <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>org.eclipse.ocl.common</artifactId>
+        <version>1.2.0.v20140610-0641</version>
+    </dependency>
+              <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>org.eclipse.ocl.ecore</artifactId>
+        <version>3.3.100.v20140610-0641</version>
+    </dependency>
+             <dependency>
+        <groupId>org.eclipse.acceleo</groupId>
+        <artifactId>lpg.runtime.java</artifactId>
+        <version>2.0.17.v201004271640</version>
+    </dependency>
+
+
+
+
+
+    
+    <dependency>
+  <groupId>org.pacesys</groupId>
+  <artifactId>openstack4j</artifactId>
+  <version>3.1.0</version>
+  <classifier>withdeps</classifier>
+</dependency>
+
     </dependencies>
     <modules>
         <module>org.occiware.mart.security</module>
@@ -52,6 +100,15 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+    <repository>
+      <id>eclipse</id>
+      <name>Eclipse Releases</name>
+      <layout>default</layout>
+      <url>https://repo.eclipse.org/content/groups/releases/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
     </repositories>
     <profiles>
         <profile>
